--- a/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/style.css
+++ b/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/style.css
@@ -23,7 +23,10 @@ body {
 
 .menu-container {
   display: flex;
-  flex-basis: 500px;
+  flex-basis: 100%;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid black; */
 }
 
 .menu-container ul {
