--- a/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/style.css
+++ b/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .header-container {
-  background-color: #5C687C;
+  background-color: #242424;
   display: flex;
 }
 
@@ -41,4 +41,61 @@ body {
   font-size: 1.3rem;
   list-style: none;
   margin-right: 10px;
+}
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.movie-container {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 700px;
+}
+
+.movie-container h2 {
+  margin: 40px 0;
+  text-align: center;
+}
+
+.movie-container div {
+  flex-basis: 16%;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card-container div {
+  align-items: center;
+  background-color: #242424;
+  border: black solid 1px;
+  color: white;
+  display: flex;
+  height: 150px;
+  justify-content: center;
+  margin: 10px;
+}
+
+.aside-container {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  flex-basis: 350px;
+  /* border: 1px black solid; */
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.aside-container h3, h4 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.aside-container p {
+  margin: 10px 0;
+  text-align: justify;
 }
