determinando o tamanho máximo do mobile

--- a/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/style.css
+++ b/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/style.css
@@ -11,15 +11,15 @@
 }
 
 body {
-
+  margin: 30px;
 }
 
 article {
-
+ font-size: large;
 }
 
 h1 {
-
+  /* font-size: small; */
 }
 
 h2 {
@@ -28,6 +28,7 @@ h2 {
 
 img {
     max-width: 100%;
+    margin-top: 20px;
 }
 
 main {
@@ -44,4 +45,8 @@ figure {
 
 figcaption {
   font-size: .8em;
+}
+
+@media screen and (max-width: 800px) {
+  
 }
