criando 3 versões de layout

--- a/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercicio-2/style.css
+++ b/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercicio-2/style.css
@@ -5,3 +5,18 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
+/* Pequeno */
+@media screen and (max-width: 479px){
+  
+}
+
+/* Médio */
+@media screen and (max-width: 768px) {
+  
+}
+
+/* Grande */
+@media screen and (min-width: 769px) {
+  
+}
