--- a/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercicio-2/style.css
+++ b/m1-fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/exercicio-2/style.css
@@ -8,15 +8,28 @@ html {
 
 /* Pequeno */
 @media screen and (max-width: 479px){
-  
+  body {
+    margin: 60px;
+    background-color: antiquewhite;
+  }
+
+  h1{
+    font-size: 25px;
+  }
 }
 
 /* Médio */
-@media screen and (max-width: 768px) {
-  
+@media screen and (min-width: 480px) and (max-width: 768px) {
+  body {
+    margin: 60px;
+    background-color: aquamarine;
+  }
 }
 
 /* Grande */
 @media screen and (min-width: 769px) {
-  
+  body {
+    margin: 60px;
+    background-color: white;
+  }
 }
